修改(WJW)tomcat7安装文档.md文件,通过设置环境变量来设置缺省参数!